Fix overflow problem

--- a/app/assets/stylesheets/team.scss
+++ b/app/assets/stylesheets/team.scss
@@ -99,6 +99,7 @@ main {
 	padding-top: 10em;
 	position: relative;
 	cursor: pointer;
+	overflow: hidden;
 }
 
 .product__bg {
